fix: description text-align

--- a/src/components/BusinessCard/style.scss
+++ b/src/components/BusinessCard/style.scss
@@ -24,7 +24,6 @@
     justify-content: space-between;
     width: 70%;
     padding: 0.5em;
-    position: relative;
 
     .business-name {
       justify-content: flex-start;
